<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference
        android:entries="@array/interfaces"
        android:title="@string/pref_interfaces_title"
        android:key="prefInterfaces"
        android:summary="@string/pref_interfaces_message"
        android:defaultValue="0"
        android:dialogTitle="@string/pref_interfaces_title"
        android:entryValues="@array/interfaces_values"/>
    <EditTextPreference
        android:title="@string/pref_port_title"
        android:key="prefPort"
        android:summary="@string/pref_port_summary"
        android:defaultValue="8080"
        android:dialogTitle="@string/pref_port_title"
        android:dialogMessage="@string/pref_port_message"
        android:inputType="number"/>
    <CheckBoxPreference
        android:title="@string/pref_password_title"
        android:key="prefPassword"
        android:summary="@string/pref_password_summary"
        android:defaultValue="false"/>
    <EditTextPreference
        android:title="@string/pref_username_title"
        android:key="prefUsername"
        android:summary="@string/pref_username_summary"
        android:defaultValue="francis"
        android:dialogTitle="@string/pref_username_title"
        android:dialogMessage="@string/pref_username_message"
        android:inputType="text"/>
    <EditTextPreference
        android:title="@string/pref_userpass_title"
        android:key="prefUserpass"
        android:summary="@string/pref_userpass_summary"
        android:defaultValue="francis"
        android:dialogTitle="@string/pref_userpass_title"
        android:dialogMessage="@string/pref_userpass_message"
        android:inputType="text"/>
    <ListPreference
        android:entries="@array/home_dir"
        android:title="@string/pref_homedir_title"
        android:key="prefHomeDir"
        android:summary="@string/pref_homedir_message"
        android:defaultValue="1"
        android:dialogTitle="@string/pref_homedir_title"
        android:entryValues="@array/home_dir_values"/>
    <Preference
        android:title="@string/pref_customfolder_title"
        android:key="prefCustomFolder"/>
    <ListPreference
        android:entries="@array/lock"
        android:title="@string/pref_lock_title"
        android:key="prefLock"
        android:summary="@string/pref_lock_message"
        android:defaultValue="0"
        android:dialogTitle="@string/pref_lock_title"
        android:entryValues="@array/lock_values"/>
    <CheckBoxPreference
        android:title="@string/pref_foreground_title"
        android:key="prefForeground"
        android:summary="@string/pref_foreground_summary"
        android:defaultValue="true"/>
    <CheckBoxPreference
        android:title="@string/pref_showcredentials_title"
        android:key="prefShowCredentials"
        android:summary="@string/pref_showcredentials_summary"
        android:defaultValue="true"/>
    <Preference
        android:title="@string/pref_resetprefs_title"
        android:key="prefResetPrefs"
        android:summary="@string/pref_resetprefs_summary"/>
</PreferenceScreen>
